Мелкие правки в спецификации
